--- a/paper/sources.bib
+++ b/paper/sources.bib
@@ -18,17 +18,25 @@
   ISSN    = {2150-914x},
 }
 
-@article{fast_tableau_set_theory,
-  title={A New Fast Tableau-Based Decision Procedure for an Unquantified Fragment of Set Theory},
-  ISBN={9783540465089},
-  ISSN={0302-9743},
-  url={http://dx.doi.org/10.1007/3-540-46508-1_8},
-  DOI={10.1007/3-540-46508-1_8},
-  journal={Lecture Notes in Computer Science},
-  publisher={Springer Berlin Heidelberg},
-  author={Cantone Domenico and Zarba Calogero G.},
-  year={2000},
-  pages={126–136}
+@inproceedings{new_fast_tableau,
+  author    = {Domenico Cantone and
+               Calogero G. Zarba},
+  editor    = {Ricardo Caferra and
+               Gernot Salzer},
+  title     = {A New Fast Tableau-Based Decision Procedure for an Unquantified Fragment
+               of Set Theory},
+  booktitle = {Automated Deduction in Classical and Non-Classical Logics, Selected
+               Papers},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {1761},
+  pages     = {126--136},
+  publisher = {Springer},
+  year      = {1998},
+  url       = {https://doi.org/10.1007/3-540-46508-1\_8},
+  doi       = {10.1007/3-540-46508-1\_8},
+  timestamp = {Tue, 14 May 2019 10:00:49 +0200},
+  biburl    = {https://dblp.org/rec/conf/ftp/CantoneZ98.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @book{set_theory_for_computing,
