--- a/paper/sources.bib
+++ b/paper/sources.bib
@@ -94,3 +94,13 @@
   ISSN    = {2150-914x},
 }
 
+@article{graph_theory_afp,
+  author  = {Lars Noschinski},
+  title   = {Graph Theory},
+  journal = {Archive of Formal Proofs},
+  month   = {April},
+  year    = {2013},
+  note    = {\url{https://isa-afp.org/entries/Graph_Theory.html},
+            Formal proof development},
+  ISSN    = {2150-914x},
+}
